Added integration with private S3 buckets
We had to change the Docker image from NGINX:alpine
to OpenResty:buster to be able to do some LUA scripting
in order to sign AWS requests.

The cache site was not migrated: to be done in a
separate issue.

--- a/nginx-site-example.conf
+++ b/nginx-site-example.conf
@@ -1,99 +1,68 @@
-server {
-    listen       80;
-    server_name  localhost;
 
-    #charset koi8-r;
-    access_log  /var/log/nginx/host.access.log  main;
-    error_log   /var/log/nginx/host.error.log warn;
+# Copyright (C) 2020  Axel Amigo Arnold
+
+# This program is free software: you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation, either version 3 of the License, or
+# (at your option) any later version.
+
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see <https://www.gnu.org/licenses/>.
+
+server {
+    listen 80;
+    server_tokens off;
+    server_name _;
+    set $bucket_region 'your-bucket-region';
+    set $bucket_name 'your-bucket-name';
+    set $s3_host $bucket_name.s3.$bucket_region.amazonaws.com;
+    access_log /tmp/access.log;
+    error_log /tmp/error.log warn;
+
+    # Rename this location to one of your choice
+    location ~ /s/ {
+        secure_link $arg_md5,$arg_expires;
+
+        # Rename "AM1ghtyS3cr3t!" with a secret of your choice
+        secure_link_md5 "$secure_link_expires$uri$remote_addr AM1ghtyS3cr3t!";
+
+        if ($secure_link = "") {
+        return 403;
+        }
+
+        if ($secure_link = "0") {
+        return 410;
+        }
+
+        rewrite ^/s/(.*)?.*$ /$1;
+    }
 
     location / {
-        root   /usr/share/nginx/html;
-        index  index.html index.htm;
-    }
+        internal;
+        resolver        127.0.0.1 local=on valid=300s;
+        resolver_timeout 10s;
 
-	# Rename this location to one of your choice
-    location /s/ {
-        secure_link $arg_md5,$arg_expires;
-		# Rename "AM1ghtyS3cr3t!" with a secret of your choice
-        secure_link_md5 "$secure_link_expires$uri$remote_addr AM1ghtyS3cr3t!";
-
-        if ($secure_link = "") {
-            return 403;
+        # Sign AWS request using
+        # AWS Signature Version 4
+        # https://docs.aws.amazon.com/general/latest/gr/signature-version-4.html
+        access_by_lua_block {
+            require("resty.aws").s3_set_headers(ngx.var.s3_host, ngx.var.uri)
         }
-
-        if ($secure_link = "0") {
-            return 410;
-        }
-
-        rewrite ^/s/(.*)$ /s3/$1;
-    }
-
-	# Rename this location to one of your choice
-    location /s/cached/ {
-        secure_link $arg_md5,$arg_expires;
-		# Rename "AM1ghtyS3cr3t!" with a secret of your choice
-        secure_link_md5 "$secure_link_expires$uri$remote_addr AM1ghtyS3cr3t!";
-
-        if ($secure_link = "") {
-            return 403;
-        }
-
-        if ($secure_link = "0") {
-            return 410;
-        }
-
-        #rewrite ^ /s3/$secure_link;
-        rewrite ^/s/cached/(.*)$ /s3_cached/$1;
-    }
-
-    location /s3/ {
-      internal;
-      proxy_http_version     1.1;
-      proxy_set_header       Connection "";
-      proxy_set_header       Authorization '';
-      proxy_set_header       Host your-bucket;
-      proxy_hide_header      x-amz-id-2;
-      proxy_hide_header      x-amz-request-id;
-      proxy_hide_header      x-amz-meta-server-side-encryption;
-      proxy_hide_header      x-amz-server-side-encryption;
-      proxy_hide_header      Set-Cookie;
-      proxy_ignore_headers   Set-Cookie;
-      proxy_intercept_errors on;
-      add_header             Cache-Control max-age=31536000;
-      proxy_pass             https://your-bucket/;
-    }
-
-    location /s3_cached/ {
-      internal;
-      proxy_cache            s3_cache;
-      proxy_http_version     1.1;
-      proxy_set_header       Connection "";
-      proxy_set_header       Authorization '';
-      proxy_set_header       Host your-bucket;
-      proxy_hide_header      x-amz-id-2;
-      proxy_hide_header      x-amz-request-id;
-      proxy_hide_header      x-amz-meta-server-side-encryption;
-      proxy_hide_header      x-amz-server-side-encryption;
-      proxy_hide_header      Set-Cookie;
-      proxy_ignore_headers   Set-Cookie;
-      proxy_cache_revalidate on;
-      proxy_intercept_errors on;
-      proxy_cache_use_stale  error timeout updating http_500 http_502 http_503 http_504;
-      proxy_cache_lock       on;
-      proxy_cache_valid      200 304 60m;
-      add_header             Cache-Control max-age=31536000;
-      add_header             X-Cache-Status $upstream_cache_status;
-      proxy_pass             https://your-bucket/;
-    }
-
-    error_page  404              /404.html;
-
-    # redirect server error pages to the static page /50x.html
-    #
-    error_page   500 502 503 504  /50x.html;
-    location = /50x.html {
-        root   /usr/share/nginx/html;
+        proxy_http_version     1.1;
+        proxy_hide_header      x-amz-id-2;
+        proxy_hide_header      x-amz-request-id;
+        proxy_hide_header      x-amz-meta-server-side-encryption;
+        proxy_hide_header      x-amz-server-side-encryption;
+        proxy_hide_header      Set-Cookie;
+        proxy_ignore_headers   Set-Cookie;
+        proxy_intercept_errors on;
+        add_header             Cache-Control max-age=31536000;
+        proxy_pass https://$s3_host$uri;
     }
 
 }
-
