--- a/nginx-site-example.conf
+++ b/nginx-site-example.conf
@@ -42,6 +42,23 @@ server {
         rewrite ^/s/(.*)?.*$ /$1;
     }
 
+    location ~ /l/ {
+        secure_link $arg_md5,$arg_expires;
+
+        # Rename "AM1ghtyS3cr3t!" with a secret of your choice
+        secure_link_md5 "$secure_link_expires$uri AM1ghtyS3cr3t!";
+
+        if ($secure_link = "") {
+        return 403;
+        }
+
+        if ($secure_link = "0") {
+        return 410;
+        }
+
+        rewrite ^/l/(.*)?.*$ /$1;
+    }
+
     location / {
         internal;
         resolver        127.0.0.1 local=on valid=300s;
