Fallback to NGINX 404 page to avoid showing S3 msg
When facing a 404 from S3, we previously returned the S3 error
(i.e: NoSuchKeyThe specified key does not exist.oneregularfile.tar.gzDE88847C261033200j3/8GZn8lMcM0BdbNXi2k0P4GR+9tGy3YgIhxIG61SSFbprAZNHAn3V5CpxkHykk17gZy+hKqs=)

Now we just return NGINX 404 default page.

--- a/nginx-site-example.conf
+++ b/nginx-site-example.conf
@@ -37,6 +37,8 @@ server {
         include secret-site.conf;
     }
 
+    error_page 404             /404.html;
+
     location / {
         internal;
         resolver        127.0.0.1 local=on valid=300s;
