--- a/nginx-site-example.conf
+++ b/nginx-site-example.conf
@@ -24,16 +24,35 @@ server {
     access_log /tmp/access.log;
     error_log /tmp/error.log warn;
 
-    # Rename this location to one of your choice
-    location ~ /s/ {
+    # S.U.R: secure_link_expires, uri and remote addr check
+    location ~ /sur/ {
+        secure_link $arg_md5,$arg_expires;
         # Rename "AM1ghtyS3cr3t!" with a secret of your choice
         secure_link_md5 "$secure_link_expires$uri$remote_addr AM1ghtyS3cr3t!";
         include secret-site.conf;
     }
 
-    location ~ /l/ {
+    # S.U: secure_link_expires and uri check
+    location ~ /su/ {
+        secure_link $arg_md5,$arg_expires;
         # Rename "AM1ghtyS3cr3t!" with a secret of your choice
         secure_link_md5 "$secure_link_expires$uri AM1ghtyS3cr3t!";
+        include secret-site.conf;
+    }
+
+    # U.R: URI and remote addr check
+    location ~ /ur/ {
+        secure_link $arg_md5;
+        # Rename "AM1ghtyS3cr3t!" with a secret of your choice
+        secure_link_md5 "$uri$remote_addr AM1ghtyS3cr3t!";
+        include secret-site.conf;
+    }
+
+    # U: URI check
+    location ~ /u/ {
+        secure_link $arg_md5;
+        # Rename "AM1ghtyS3cr3t!" with a secret of your choice
+        secure_link_md5 "$uri AM1ghtyS3cr3t!";
         include secret-site.conf;
     }
 
